tests/specs/type_generic_alias.txt
# mod.ts
export type A<T> = T

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type A<T> = T
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type A<T> = T


# output.json
[
  {
    "name": "A",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "typeAlias",
        "def": {
          "tsType": {
            "repr": "T",
            "kind": "typeRef",
            "value": {
              "typeParams": null,
              "typeName": "T"
            }
          },
          "typeParams": [
            {
              "name": "T"
            }
          ]
        }
      }
    ]
  }
]
